--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, intial-scale=1.0">
 
   <title>My Resume</title>
 
@@ -14,6 +15,59 @@
 </head>
 
 <body>
-  <h1>My Resume</h1>
+  <div class="container">
+
+    <header>
+      <nav>
+        <a href="#">Home</a>
+        <a href="#">About</a>
+        <a href="#">Portfolio</a>
+        <a href="#">Contact</a>
+      </nav>
+    </header>
+
+    <section class="top-content">
+      <div>
+        <img src="imgs/coffee.jpg" alt="coffee" width="340" height="265">
+        <h1>Johnny Appleseed - Web Dev</h1>
+        <h4>Technology is my Jam!</h4>
+      </div>
+      <div>
+        <p>Occasionally I have time to work on side projects, if you're interested, let me know by signing up on this website.</p>
+        <button>Let's Team Up</button>
+      </div>
+    </section>
+
+    <section class="middle-content">
+      <div>
+        <h3>Listen Up...</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet ut minima accusantium recusandae officia assumenda corporis nihil ipsam unde cum neque harum qui ab eum rem officiis, reprehenderit earum illum.</p>
+      </div>
+      
+      <div>
+        <h3>My skills</h3>
+        <ul>
+          <li>HTML</li>
+          <li>CSS</li>
+          <li>C++</li>
+          <li>SQL</li>
+          <li>JavaScript</li>
+        </ul>
+      </div>
+    </section>
+
+    <seciton class="work-history">
+      <h2>Work History</h2>
+      <ul>
+        <li>Apple Jun 2015 - November 2016</li>
+        <li>Amazon November 2016 - April 2018</li>
+        <li>Lambda April 2018 - Present</li>
+      </ul>
+    </seciton>
+
+    <footer> 
+      <span> &copy;Copyright Appleseed, LLC 2019</span>
+    </footer>
+</div>
 </body>
 </html>
